[package]
name = "nymphaea"
version = "0.1.0"
authors = ["hamadatakaki <i16hamadat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
libflate = "0.1"
rust-crypto = "0.2.36"
clap = "2.33.0"
